use valueOf method